--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mesto</title>
-  <link rel="stylesheet" href="./pages/index.css">
+  <!-- <link rel="stylesheet" href="./pages/index.css"> -->
 </head>
 <body class="page">
 <div class="page__content">
   <header class="header page__section">
-    <img src="./images/logo.svg" alt="Логотип проекта масто" class="logo header__logo">
+    <img src="/images/logo.svg" alt="Логотип проекта масто" class="logo header__logo">
   </header>
   <main class="content">
     <section class="profile page__section">
@@ -83,8 +83,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="./scripts/index.js" defer></script>
-<script src="./scripts/validate.js" defer></script>
+<!-- <script type="module" src="./scripts/index.js" defer></script>
+<script src="./scripts/validate.js" defer></script> -->
 
 <!--Относится к реализации пятого спринта-->
 <template class="card-template">
